--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/fullstack/static/js/main.ef986e19.js"></script><link href="/fullstack/static/css/main.aa12bded.css" rel="stylesheet"></head><div id="root"></div>
+<head><script defer="defer" src="/static/js/main.67ab41ce.js"></script><link href="/static/css/main.49f01c53.css" rel="stylesheet"></head><div id="root"></div>
